--- a/package.json
+++ b/package.json
@@ -79,8 +79,9 @@
     "docs": "npm-run-all docs-build docs-lint",
     "docs-build": "hugo --cleanDestinationDir",
     "docs-compile": "npm run docs-build",
+    "docs-markdownlint": "markdownlint-cli2 \"**/*.md\" \"!**/node_modules/**\"",
     "docs-vnu": "node build/vnu-jar.js",
-    "docs-lint": "npm run docs-vnu",
+    "docs-lint": "npm-run-all --aggregate-output --parallel docs-vnu docs-markdownlint",
     "docs-serve": "hugo server --port 9001 --disableFastRender",
     "docs-serve-only": "npx sirv-cli _site --port 9001",
     "lockfile-lint": "lockfile-lint --allowed-hosts npm --allowed-schemes https: --empty-hostname false --type npm --path package-lock.json",
@@ -138,6 +139,7 @@
     "karma-jasmine-html-reporter": "^2.0.0",
     "karma-rollup-preprocessor": "7.0.7",
     "lockfile-lint": "^4.9.5",
+    "markdownlint-cli2": "^0.5.1",
     "nodemon": "^2.0.20",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.17",
