--- a/config.yml
+++ b/config.yml
@@ -4,6 +4,11 @@ baseURL:                "https://getbootstrap.com"
 
 security:
   enableInlineShortcodes: true
+  exec:
+    allow:
+      - '^npx$'
+      - '^postcss$'
+      - '^babel$'
   funcs:
     getenv:
       - ^HUGO_
