--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "js-test-jquery": "cross-env JQUERY=true npm run js-test-karma",
     "lint": "npm-run-all --aggregate-output --continue-on-error --parallel js-lint css-lint lockfile-lint",
     "docs": "npm-run-all docs-build docs-lint",
-    "docs-build": "hugo --cleanDestinationDir",
+    "docs-build": "hugo --cleanDestinationDir --minify",
     "docs-compile": "npm run docs-build",
     "docs-vnu": "node build/vnu-jar.js",
     "docs-lint": "npm run docs-vnu",
@@ -106,6 +106,7 @@
   "devDependencies": {
     "@babel/cli": "^7.18.9",
     "@babel/core": "^7.18.9",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.18.9",
     "@popperjs/core": "^2.11.5",
     "@rollup/plugin-babel": "^5.3.1",
@@ -176,5 +177,10 @@
     "peerDependencies": {
       "@popperjs/core": "^2.11.5"
     }
+  },
+  "dependencies": {
+    "@docsearch/js": "^3.1.1",
+    "@stackblitz/sdk": "^1.8.0",
+    "clipboard": "^2.0.11"
   }
 }
